--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Responsive Website</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="stylesheet.css">
+    <link rel="stylesheet" href="styles.css">
     <script src="https://kit.fontawesome.com/c7001f38e0.js" crossorigin="anonymous"></script>
     <title>Minimallista</title>
   </head>
